--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <main class="container flow-3">
                 <section id="section-two">
                     <div>
-                        <article id="article-two" class="flow-2 black wd-40">
+                        <article id="article-two" class="flow-2 black wd-40 shadow">
                             <div class="progress-container">
                                 <div class="bar flex">
                                     <p>React</p>
@@ -89,10 +89,10 @@
                             </div>
 
                         </article>
-                        <article class="flow-3 wd-40">
+                        <article class="flow-3 wd-40 shadow">
                             <h2 class="flow-1">Hobbies</h2>
                             <div>
-                                <div class="card flex flow-2">
+                                <div class="card flex flow-3">
 
                                     <div class="flow-point-5">
                                         <img src="./portfolio/computer.jpg" alt="" class="radius">
@@ -102,7 +102,7 @@
                                 </div>
 
 
-                                <div class="card flex flow-2">
+                                <div class="card flex flow-3">
 
                                     <div class="flow-point-5">
                                         <img src="./portfolio/bicycles.jpg" alt="" class="radius">
@@ -112,7 +112,7 @@
                                 </div>
 
 
-                                <div class="card flex flow-2">
+                                <div class="card flex flow-3">
 
                                     <div class="flow-point-5">
                                         <img src="./portfolio/cooking.jpg" alt="" class="radius">
@@ -125,7 +125,7 @@
                     </div>
 
 
-                    <div class="flow-3">
+                    <div class="flow-3 shadow">
                         <article class="flow-3 wd-40">
                             <div>
                                 <h3 class="flow-2">How to organize your CSS</h3>
@@ -183,7 +183,8 @@
                     </div>
                 </section>
 
-                <section class="flow-3">
+                <section class="flow-3 shadow">
+                    <h3 class="flow-2">Project (3)</h3>
                     <ul class="flex" style="--gap:.5rem">
                         <li class="list-item"><a href="#">React</a></li>
                         <li class="list-item"><a href="#">Vue</a></li>
@@ -194,7 +195,7 @@
 
 
 
-                <section id="section-four">
+                <section id="section-four" class="shadow">
                     <article class="flow-3">
                         <div class="flow-2">
                             <div>
