--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div>
                             <div class="flow-point-5">
                                 <h2>Billy Pearson</h2>
-                                <div>Front-end developer</div>
+                                <div class="blue">Front-end developer</div>
                             </div>
                             <div class="contact flow-1 flow-point-5 black" style="--gap:1rem">
                                 <div class="flex">
@@ -128,7 +128,7 @@
                     <div class="flow-3 shadow">
                         <article class="flow-3 wd-40">
                             <div>
-                                <h3 class="flow-2">How to organize your CSS</h3>
+                                <h3 class="flow-2 red">How to organize your CSS</h3>
                                 <div class="flow-2">
                                     <img src="./portfolio/organised.jpg" alt="" class="radius">
                                 </div>
@@ -144,7 +144,7 @@
                                     molestias blanditiis
                                 </p>
 
-                                <a href="">dev.to</a>
+                                <a href="" class="no-underline">dev.to</a>
                             </div>
                         </article>
 
@@ -208,7 +208,7 @@
                                 similar with a page. The design is from devchallenges.io
                             </p>
                             <ul class="code-button flex space-between">
-                                <li class="list-item"><a href="#">Demo</a></li>
+                                <li class="list-item"><a href="https://recipe-c2793.web.app/">Demo</a></li>
                                 <li class="list-item"><a href="#">Code</a></li>
 
                             </ul>
@@ -225,7 +225,7 @@
                                 similar with a page. The design is from devchallenges.io
                             </p>
                             <ul class="code-button flex space-between">
-                                <li class="list-item"><a href="#">Demo</a></li>
+                                <li class="list-item"><a href="https://checkout-bfdeb.web.app/">Demo</a></li>
                                 <li class="list-item"><a href="#">Code</a></li>
 
                             </ul>
@@ -243,7 +243,7 @@
                                 similar with a page. The design is from devchallenges.io
                             </p>
                             <ul class="code-button flex space-between">
-                                <li class="list-item"><a href="#">Demo</a></li>
+                                <li class="list-item"><a href="https://gallery-56637.web.app/">Demo</a></li>
                                 <li class="list-item"><a href="#">Code</a></li>
 
                             </ul>
