--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <img src="./portfolio/person2.png" alt="person" class="radius">
                     </div>
                     <div class="name-cont">
-                        <div>
+                        <div id="mq-flex" class="flow-2">
                             <div class="flow-point-5">
                                 <h2>Billy Pearson</h2>
                                 <div class="blue">Front-end developer</div>
