--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hero">
             <header class="container flow-3">
                 <article id="photo-article">
-                    <div id="photo" class="flex center flow-2">
+                    <div id="photo" class="flex  flow-2">
                         <img src="./portfolio/person2.png" alt="person" class="radius">
                     </div>
                     <div class="name-cont">
@@ -29,7 +29,7 @@
                                 <div class="blue">Front-end developer</div>
                             </div>
                             <div class="contact flow-1 flow-point-5 black" style="--gap:1rem">
-                                <div class="flex">
+                                <div class="flex pad-2">
                                     <span class="material-symbols-outlined">
                                         mail
                                     </span>
@@ -68,23 +68,23 @@
 
                                 <div class="bar flex">
                                     <p>Javascript</p>
-                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="90"></meter>
+                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="70"></meter>
                                 </div>
                                 <div class="bar flex">
                                     <p>CSS</p>
-                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="60"></meter>
+                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="70"></meter>
                                 </div>
                                 <div class="bar flex">
                                     <p>HTML</p>
-                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="60"></meter>
+                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="80"></meter>
                                 </div>
                                 <div class="bar flex">
                                     <p>Express</p>
-                                    <meter min="0" max="100" low="33" high="60" optimum="99" value="50"></meter>
+                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="59"></meter>
                                 </div>
                                 <div class="bar flex">
                                     <p>Node</p>
-                                    <meter min="0" max="100" low="33" high="60" optimum="99" value="20"></meter>
+                                    <meter min="0" max="100" low="33" high="60" optimum="75" value="50"></meter>
                                 </div>
                             </div>
 
