--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </p>
                             <ul class="code-button flex space-between">
                                 <li class="list-item"><a href="https://recipe-c2793.web.app/">Demo</a></li>
-                                <li class="list-item"><a href="#">Code</a></li>
+                                <li class="list-item"><a href="https://github.com/femogiga/recipe">Code</a></li>
 
                             </ul>
                         </div>
@@ -226,7 +226,8 @@
                             </p>
                             <ul class="code-button flex space-between">
                                 <li class="list-item"><a href="https://checkout-bfdeb.web.app/">Demo</a></li>
-                                <li class="list-item"><a href="#">Code</a></li>
+                                <li class="list-item"><a
+                                        href="https://github.com/femogiga/checkout/tree/mobile">Code</a></li>
 
                             </ul>
                         </div>
@@ -244,7 +245,7 @@
                             </p>
                             <ul class="code-button flex space-between">
                                 <li class="list-item"><a href="https://gallery-56637.web.app/">Demo</a></li>
-                                <li class="list-item"><a href="#">Code</a></li>
+                                <li class="list-item"><a href="https://github.com/femogiga/gallery">Code</a></li>
 
                             </ul>
                         </div>
@@ -255,7 +256,7 @@
                             <li><a href="#">1</a></li>
                             <li><a href="#">2</a></li>
                             <li><a href="#">3</a></li>
-                            <li><a href="#">***</a></li>
+                            <li><a href="#">⋯</a></li>
                             <li><a href="#">10</a></li>
                             <li><a href="#">&#62;</a></li>
                         </ul>
